last contrast correction

--- a/style.css
+++ b/style.css
@@ -19,6 +19,13 @@ address {
     color: #000000;
 }
 
+.black {
+    color: black;
+    font-weight: 700;
+    margin-bottom: 40px;
+    font-family: "helvetica";
+}
+
  /* modification seo et accessibilitées */
 
 a,
@@ -659,7 +666,6 @@ h3,
 h4,
 h5,
 h6,
-p,
 label,
 .btn,
 a {
@@ -723,6 +729,7 @@ h2 {
     font-size: 22px;
     line-height: 1.4em;
     font-weight: 700;
+    position: relative;
 }
 
 h3 {
@@ -740,7 +747,7 @@ h3 {
 }
 
 h1 {
-    color: #333333!important;
+    color: black!important;
 }
 
 h4 {
@@ -753,7 +760,7 @@ h4 {
 }
 
 .white {
-    color: black!important;
+    color: white!important;
     font-weight: 700;
     margin-bottom: 40px;
 }
@@ -794,7 +801,7 @@ h4 {
 }
 
 .tc-white {
-    color: black!important;
+    color: white!important;
 }
 
 .btn-atomic-tangerine {
